@@ -11,6 +11,11 @@ Package author: David A. Schneider
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-00-21
+2014-03-25 David
+- fix bug with what calibstore data to associate with cspad2x2
+- update unittest
+	
 Tag: V00-00-20
 2014-03-25 David
 - support for const ndarrays
